# Flight-Price-Tracker

./: .gitignore  README.md  candlestick_chart.py  flight_prices.csv  plane_tickets.py  pyproject.toml  requirements.txt  visualize.py  workspace.yaml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml
dagster_project/: __init__.py
dagster_project/assets/: candlestick_chart.py  flight_ticket.py  parallel_search.py  plane_tickets.py  visualize.py
dagster_project/jobs/: __init__.py  flight_prices_job.py
dagster_project/resources/: api_resource.py
dagster_project/schedules/: __init__.py  schedule.py
