[project]
name = "flight_price_tracker"
version = "0.1.0"
description = """This project is a flight price tracker and analyzer built with Python.
                 After studying in Germany for three years without returning to Vietnam,
                 I wanted to help students like me find the cheapest flights home for Tet (Vietnamese Lunar New Year).
              """
authors = [
  { name="Dinh Khai Tran" }
]
requires-python = "==3.14.*"
dependencies = [
    "amadeus>=12.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "ruff>=0.9.1",
]
